--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "expo-asset": "~11.0.1"
+    "expo-asset": "~11.0.1",
+    "expo-image": "~2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
