--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint",
+    "lint": "npx eslint . --fix",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "jest": {
@@ -20,10 +20,12 @@
     "@react-navigation/native": "^7.0.0",
     "@tanstack/react-query": "^5.62.8",
     "expo": "~52.0.20",
+    "expo-asset": "~11.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
+    "expo-image": "~2.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.14",
     "expo-splash-screen": "~0.29.18",
@@ -40,9 +42,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-asset": "~11.0.1",
-    "expo-image": "~2.0.3"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -50,6 +50,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "eslint-config-expo": "~8.0.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "prettier": "^3.4.2",
