--- a/app.json
+++ b/app.json
@@ -38,6 +38,12 @@
         {
           "assets": ["./assets/icons"]
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "사용자의 사진에 액세스하려면 권한이 필요합니다."
+        }
       ]
     ],
     "experiments": {
