--- a/app.json
+++ b/app.json
@@ -44,6 +44,12 @@
         {
           "photosPermission": "사용자의 사진에 액세스하려면 권한이 필요합니다."
         }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "connectco가 사용자의 위치에 접근하고자 합니다."
+        }
       ]
     ],
     "experiments": {
