--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.6",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-kakao/core": "^2.2.6",
     "@react-native-kakao/user": "^2.2.6",
     "@react-navigation/bottom-tabs": "^7.0.0",
@@ -26,6 +27,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "expo": "~52.0.20",
+    "expo-apple-authentication": "~7.1.2",
     "expo-asset": "~11.0.1",
     "expo-blur": "~14.0.1",
     "expo-build-properties": "~0.13.1",
