--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-kakao/core": "^2.2.6",
     "@react-native-kakao/user": "^2.2.6",
+    "@react-native-seoul/naver-login": "^4.0.4",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@tanstack/react-query": "^5.62.8",
