--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@actbase/react-daum-postcode": "^1.0.4",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.6",
     "@react-native-community/datetimepicker": "8.2.0",
@@ -24,6 +25,7 @@
     "@react-native-seoul/naver-login": "^4.0.4",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
@@ -55,13 +57,16 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "sockjs-client": "^1.6.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "@types/sockjs-client": "^1.5.4",
     "eslint-config-expo": "~8.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "jest": "^29.2.1",
