--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.6",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-firebase/app": "^21.7.1",
+    "@react-native-firebase/auth": "^21.7.1",
+    "@react-native-firebase/crashlytics": "^21.7.1",
+    "@react-native-firebase/messaging": "^21.7.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-kakao/core": "^2.2.6",
     "@react-native-kakao/user": "^2.2.6",
@@ -41,6 +45,7 @@
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.4",
+    "expo-notifications": "~0.29.12",
     "expo-router": "~4.0.14",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
@@ -59,7 +64,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "sockjs-client": "^1.6.1",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "expo-updates": "~0.26.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
