fix: 환경 변수 관련 설정 수정

--- a/eas.json
+++ b/eas.json
@@ -15,11 +15,7 @@
     },
     "production": {
       "autoIncrement": true,
-      "channel": "production",
-      "env": {
-        "GOOGLE_SERVICES_JSON": "@env:GOOGLE_SERVICES_JSON",
-        "GOOGLE_SERVICES_PLIST": "@env:GOOGLE_SERVICES_PLIST"
-      }
+      "channel": "production"
     }
   },
   "submit": {
