--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "npx eslint . --fix",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "build:dev": "eas build --profile development --platform all",
+    "build:prod": "eas build --platform all"
   },
   "jest": {
     "preset": "jest-expo"
@@ -65,7 +67,8 @@
     "react-native-webview": "13.12.5",
     "sockjs-client": "^1.6.1",
     "zustand": "^5.0.3",
-    "expo-updates": "~0.26.13"
+    "expo-updates": "~0.26.13",
+    "expo-dev-client": "~5.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
