--- a/package.json
+++ b/package.json
@@ -41,18 +41,19 @@
     "expo-blur": "~14.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.10",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
     "expo-image": "~2.0.3",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.4",
-    "expo-notifications": "~0.29.12",
     "expo-router": "~4.0.14",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
+    "expo-updates": "~0.26.13",
     "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -66,9 +67,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "sockjs-client": "^1.6.1",
-    "zustand": "^5.0.3",
-    "expo-updates": "~0.26.13",
-    "expo-dev-client": "~5.0.10"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
