--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.4",
     "expo-router": "~4.0.14",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-updates": "~0.26.13",
     "expo-web-browser": "~14.0.1",
+    "fast-text-encoding": "^1.0.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
@@ -61,11 +63,11 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "sockjs-client": "^1.6.1",
-    "zustand": "^5.0.3",
-    "expo-secure-store": "~14.0.1"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -77,6 +79,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "msw": "^2.7.0",
     "prettier": "^3.4.2",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
