--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "sockjs-client": "^1.6.1",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
