--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@actbase/react-daum-postcode": "^1.0.4",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.6",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-firebase/app": "^21.7.1",
     "@react-native-firebase/messaging": "^21.7.1",
@@ -67,8 +68,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "sockjs-client": "^1.6.1",
-    "zustand": "^5.0.3",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
